--- a/react-knowledge-study/package.json
+++ b/react-knowledge-study/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^1.0.6",
+    "react-app-rewired": "^2.1.6"
   }
 }
