--- a/react-mobx-demo/package.json
+++ b/react-mobx-demo/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-resizable": "^3.0.3",
     "antd": "^4.22.3",
     "array-move": "^4.0.0",
     "mobx": "^6.6.1",
